# ml-showcase

./: .gitignore  README.md
core/attention-mechanisms/: README.md  pyproject.toml
core/attention-mechanisms/src/: __init__.py
core/attention-mechanisms/src/attention/: causal_attention.py  cross_attention.py  multi_head_attention.py  self_attention.py  temporal_attention.py
core/attention-mechanisms/src/encodings/: learnable_encoding.py  positional_encoding.py  temporal_encoding.py
core/attention-mechanisms/src/models/: attention_models.py
core/attention-mechanisms/src/transformers/: trading_transformer.py  transformer_block.py
core/attention-mechanisms/src/utils/: attention_utils.py  visualization.py
core/attention-mechanisms/tests/: test_attention.py
core/bayesian-networks/: README.md  pyproject.toml
core/bayesian-networks/src/inference/: variational_inference.py
core/bayesian-networks/src/layers/: bayesian_linear.py
core/bayesian-networks/src/models/: bnn_time_series.py
core/continual-learning/: README.md  pyproject.toml  requirements.txt
core/continual-learning/src/core/: continual_learner.py  memory_buffer.py
core/continual-learning/src/data/: stream_generator.py  task_manager.py
core/continual-learning/src/evaluation/: forgetting_metrics.py  plasticity_metrics.py
core/continual-learning/src/strategies/: ewc.py  packnet.py  progressive_neural.py  rehearsal.py
core/continual-learning/src/utils/: model_checkpoint.py  visualization.py
core/continual-learning/tests/: test_continual_learning.py
core/explainable-ai/: README.md  pyproject.toml
core/generative-models/: README.md  pyproject.toml  requirements.txt
core/generative-models/src/augmentation/: synthetic_generator.py
core/generative-models/src/gan/: conditional_gan.py  timegan.py  vanilla_gan.py  wgan.py
core/generative-models/src/vae/: variational_autoencoder.py
core/graph-networks/: README.md  pyproject.toml  requirements.txt
core/graph-networks/src/: __init__.py
core/graph-networks/src/applications/: price_prediction.py
core/graph-networks/src/graph_construction/: __init__.py  correlation_graph.py
core/graph-networks/src/layers/: graph_layers.py
core/graph-networks/src/models/: __init__.py  gat.py  gcn.py  gnn_ensemble.py  graphsage.py  mpnn.py
core/model-compression/: CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
core/model-compression/src/: __init__.py
core/model-compression/src/deployment/: edge_deployer.py
core/model-compression/src/distillation/: knowledge_distiller.py  teacher_student.py
core/model-compression/src/evaluation/: accuracy_validator.py  compression_metrics.py
core/model-compression/src/optimization/: compression_pipeline.py  model_optimizer.py
core/model-compression/src/pruning/: structured_pruning.py  unstructured_pruning.py
core/model-compression/src/quantization/: dynamic_quantization.py  quantizer.py
core/model-compression/src/utils/: model_analyzer.py
core/model-compression/tests/: test_compression.py
nlp/nlp-sentiment/: README.md  pyproject.toml
nlp/nlp-sentiment/src/: __init__.py
nlp/nlp-sentiment/src/models/: __init__.py  bert_sentiment.py  (+5 more)
nlp/sentiment-engine/: .env.example  README.md  pyproject.toml
nlp/sentiment-engine/src/: __init__.py
nlp/sentiment-engine/tests/: __init__.py  test_models.py
prophet-forecasting/: README.md  pyproject.toml  pytest.ini
prophet-forecasting/examples/: basic_usage.py
prophet-forecasting/src/: __init__.py
prophet-forecasting/src/api/: __init__.py  forecast_api.py
prophet-forecasting/src/config/: prophet_config.py
prophet-forecasting/src/models/: __init__.py  advanced_prophet.py  prophet_model.py
prophet-forecasting/src/multi_horizon/: __init__.py  ensemble_forecaster.py  horizon_config.py  horizon_optimizer.py  model_orchestrator.py  multi_horizon_engine.py  performance_monitor.py
prophet-forecasting/src/preprocessing/: __init__.py  data_processor.py
prophet-forecasting/src/support_resistance/: __init__.py  algorithms.py  detector.py  level_manager.py  validator.py  visualizer.py
prophet-forecasting/src/utils/: __init__.py  exceptions.py  helpers.py  logger.py  metrics.py
prophet-forecasting/src/validation/: __init__.py  forecast_validator.py
prophet-forecasting/tests/: __init__.py  test_prophet_model.py
reinforcement-learning/curiosity-exploration/: README.md  pyproject.toml
reinforcement-learning/curiosity-exploration/src/: __init__.py
reinforcement-learning/curiosity-exploration/tests/: test_curiosity.py
reinforcement-learning/dqn/: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
reinforcement-learning/dqn/src/: __init__.py
reinforcement-learning/dqn/tests/: test_dqn.py
reinforcement-learning/meta-learning/: README.md  pyproject.toml
reinforcement-learning/meta-learning/src/: __init__.py
reinforcement-learning/meta-learning/tests/: test_meta_learning.py
reinforcement-learning/ppo/: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
reinforcement-learning/ppo/src/: __init__.py  train_ppo_crypto.py
reinforcement-learning/ppo/tests/: test_ppo.py
trading/automl-pipeline/: README.md  pyproject.toml  requirements.txt
trading/automl-pipeline/tests/: test_automl.py
trading/elliott-wave/: README.md  pyproject.toml
trading/elliott-wave/src/: __init__.py
trading/elliott-wave/tests/: test_patterns.py
trading/fear-greed-index/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
trading/fear-greed-index/src/: __init__.py
trading/harmonic-patterns/: LICENSE  README.md  pyproject.toml  validate_implementation.py
trading/harmonic-patterns/examples/: gartley_demo.py
trading/harmonic-patterns/src/: __init__.py  detector.py  monitor.py
trading/harmonic-patterns/tests/: test_gartley_pattern.py  test_harmonic_patterns_comprehensive.py
trading/order-flow-detection/: .env.example  README.md  pyproject.toml  pytest.ini
trading/order-flow-detection/src/: __init__.py
trading/order-flow-detection/tests/: test_order_flow.py  test_patterns.py
(+312 files in other folders)
