[project]
name = "ml-bayesian-networks"
version = "1.0.0"
description = "Bayesian Neural Networks for uncertainty-aware crypto trading"
authors = [{name = "ML Team", email = "team@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "torch>=2.0.0",
    "tensorflow>=2.14.0",
    "tensorflow-probability>=0.22.0",
    "pyro-ppl>=1.8.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "arviz>=0.16.0",
    "pymc>=5.0.0",
    "jax>=0.4.0",
    "numpyro>=0.13.0",
    "tqdm>=4.65.0",
    "joblib>=1.3.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.4.0",
    "flake8>=6.0.0",
    "pre-commit>=3.3.0"
]

cuda = [
    "torch[cuda]>=2.0.0",
    "cupy>=12.0.0"
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term"