[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-continual-learning"
version = "5.0.0"
description = "Enterprise-grade continual learning system for Crypto Trading Bot v5.0 with enterprise integration"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "ML Team", email = "dev@ml-framework.ai"},
    {name = "Claude AI Assistant", email = "assistant@anthropic.com"}
]
maintainers = [
    {name = "ML Team", email = "dev@ml-framework.ai"}
]
keywords = [
    "machine-learning",
    "continual-learning", 
    "cryptocurrency",
    "trading",
    "pytorch",
    "ml-framework",
    "enterprise",
    "anti-forgetting",
    "neural-networks"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0,<3.0.0",
    "numpy>=1.21.0,<2.0.0",
    "pandas>=1.3.0,<3.0.0", 
    "scikit-learn>=1.0.0,<2.0.0",
    "matplotlib>=3.5.0,<4.0.0",
    "seaborn>=0.11.0,<1.0.0",
    "plotly>=5.0.0,<6.0.0",
    "tqdm>=4.64.0,<5.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "fastapi>=0.100.0,<1.0.0",
    "uvicorn[standard]>=0.20.0,<1.0.0",
    "python-multipart>=0.0.6",
    "httpx>=0.24.0,<1.0.0"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-mock>=3.10.0,<4.0.0",
    "black>=22.0.0,<24.0.0",
    "flake8>=5.0.0,<7.0.0",
    "mypy>=1.0.0,<2.0.0",
    "isort>=5.10.0,<6.0.0",
    "pre-commit>=3.0.0,<4.0.0"
]
docs = [
    "sphinx>=5.0.0,<8.0.0",
    "sphinx-rtd-theme>=1.0.0,<3.0.0",
    "sphinx-autodoc-typehints>=1.19.0,<2.0.0",
    "myst-parser>=0.18.0,<1.0.0"
]
jupyter = [
    "jupyter>=1.0.0,<2.0.0",
    "ipykernel>=6.0.0,<7.0.0",
    "ipywidgets>=8.0.0,<9.0.0",
    "jupyterlab>=3.4.0,<5.0.0"
]
monitoring = [
    "tensorboard>=2.10.0,<3.0.0",
    "wandb>=0.13.0,<1.0.0",
    "mlflow>=2.0.0,<3.0.0"
]
storage = [
    "redis>=4.0.0,<6.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "sqlalchemy>=1.4.0,<3.0.0",
    "alembic>=1.8.0,<2.0.0"
]
all = [
    "ml-continual-learning[dev,docs,jupyter,monitoring,storage]"
]

[project.urls]
Homepage = "https://github.com/KeepALifeUS"
Documentation = "https://example.com"
Repository = "https://github.com/KeepALifeUS"
"Bug Tracker" = "https://github.com/KeepALifeUS"
"Changelog" = "https://github.com/KeepALifeUS"
"Funding" = "#"

[project.scripts]
ml-continual-learning = "ml_continual_learning.cli:main"

[project.entry-points."ml.strategies"]
ewc = "ml_continual_learning.strategies.ewc:EWCLearner"
rehearsal = "ml_continual_learning.strategies.rehearsal:RehearsalLearner"
progressive = "ml_continual_learning.strategies.progressive_neural:ProgressiveNetworkLearner"
packnet = "ml_continual_learning.strategies.packnet:PackNetLearner"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["ml_continual_learning*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
ml_continual_learning = [
    "py.typed",
    "*.yaml",
    "*.yml",
    "*.json",
    "*.toml"
]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["ml_continual_learning"]
known_third_party = ["torch", "numpy", "pandas", "matplotlib", "seaborn", "plotly"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "seaborn.*",
    "plotly.*",
    "sklearn.*",
    "tqdm.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src/ml_continual_learning",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml"
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
markers = [
    "unit: marks tests as unit tests (deselect with '-m \"not unit\"')",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests as requiring GPU (deselect with '-m \"not gpu\"')",
    "network: marks tests as requiring network access"
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/setup.py",
    "*/conftest.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]
show_missing = true
skip_covered = false
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.flake8]
max-line-length = 100
extend-ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long (handled by black)
    "W503",  # line break before binary operator
    "W504"   # line break after binary operator
]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
    ".mypy_cache",
    ".pytest_cache"
]
per-file-ignores = [
    "__init__.py:F401",
    "tests/*:S101"
]
max-complexity = 15

[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]

[tool.doc8]
ignore-path = [
    "docs/_build",
    ".tox",
    ".venv"
]
max-line-length = 100
sphinx = true

[tool.pydocstyle]
inherit = false
convention = "google"
add_ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D107",  # Missing docstring in __init__
    "D213",  # Multi-line docstring summary should start at the second line
    "D203",  # 1 blank line required before class docstring
    "D212"   # Multi-line docstring summary should start at the first line
]

[tool.ruff]
target-version = "py312"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]

[tool.ruff.mccabe]
max-complexity = 15

# enterprise Configuration
[tool.enterprise]
enterprise = true
category = "machine-learning"
domain = "cryptocurrency"
version = "5.0.0"
patterns = [
    "continual-learning",
    "anti-forgetting", 
    "adaptive-systems",
    "memory-management",
    "performance-monitoring"
]

[tool.enterprise.compliance]
security = "enterprise"
performance = "high"
reliability = "mission-critical"
scalability = "horizontal"
maintainability = "high"

[tool.enterprise.deployment]
docker = true
kubernetes = true
cloud_native = true
horizontal_scaling = true
monitoring = "prometheus"
logging = "structured"

[tool.enterprise.quality]
code_coverage_threshold = 85
complexity_threshold = 15
documentation_coverage = "high"
type_annotation_coverage = 95

[tool.enterprise.performance]
memory_limit = "8Gi"
cpu_limit = "4000m"
startup_time_max = "30s"
response_time_p95 = "500ms"
throughput_min = "1000req/s"