[project]
name = "ml-generative-models"
version = "1.0.0"
description = "Generative Models for Data Augmentation in Crypto Trading"
authors = [{name = "ML Team", email = "team@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "torch>=2.0.0",
    "tensorflow>=2.14.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "tensorboard>=2.14.0",
    "wandb>=0.15.0",
    "tqdm>=4.65.0",
    "joblib>=1.3.0",
    "pydantic>=2.0.0",
    "statsmodels>=0.14.0",
    "arch>=6.0.0",
    "yfinance>=0.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.4.0",
    "flake8>=6.0.0",
    "pre-commit>=3.3.0"
]

cuda = [
    "torch[cuda]>=2.0.0",
    "cupy>=12.0.0"
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=html"