[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-graph-networks"
version = "1.0.0"
description = "Enterprise Graph Neural Networks for Crypto Trading Bot v5.0"
authors = [
    {name = "ML Team", email = "ml@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = [
    "graph-neural-networks", 
    "crypto-trading", 
    "pytorch-geometric", 
    
    "enterprise-ml"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.1.0",
    "torch-geometric>=2.4.0",
    "torch-scatter>=2.1.2",
    "torch-sparse>=0.6.18",
    "torch-cluster>=1.6.3",
    "torch-spline-conv>=1.2.2",
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "networkx>=3.2.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.17.0",
    "dgl>=1.1.0",
    "stellargraph>=1.2.1",
    "fastapi>=0.104.0",
    "pydantic>=2.5.0",
    "redis>=5.0.0",
    "asyncio-mqtt>=0.16.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.9.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0"
]
jupyter = [
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.1.0",
    "jupyter-dash>=0.4.2"
]
visualization = [
    "dash>=2.14.0",
    "dash-cytoscape>=0.3.0",
    "graphviz>=0.20.0",
    "pygraphviz>=1.11.0"
]

[project.urls]
Homepage = "https://github.com/KeepALifeUS"
Repository = "https://github.com/KeepALifeUS"
Issues = "https://github.com/KeepALifeUS"
Documentation = "https://example.com"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = [
    "tests"
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E501"]
exclude = [
    ".git",
    "__pycache__",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__init__.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError"
]