[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-model-compression"
version = "1.0.0"
description = "Comprehensive ML Model Compression System for Crypto Trading Bot v5.0"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Development Team", email = "dev@example.com"}
]
maintainers = [
    {name = "AI Team", email = "ai@example.com"}
]
keywords = [
    "machine-learning",
    "model-compression", 
    "quantization",
    "pruning",
    "knowledge-distillation",
    "crypto-trading",
    "edge-deployment",
    "pytorch",
    "tensorflow",
    "high-frequency-trading"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0", 
    "tensorflow>=2.13.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "tqdm>=4.65.0",
    "psutil>=5.9.0",
    "pynvml>=11.5.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "datasets>=2.13.0",
    "tensorboard>=2.13.0",
    "wandb>=0.15.0",
    "mlflow>=2.5.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.4.0",
    "loguru>=0.7.0",
    "httpx>=0.24.0",
    "aiofiles>=23.1.0",
    "asyncio-mqtt>=0.13.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-xdist>=3.3.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "flake8-docstrings>=1.7.0",
    "flake8-type-checking>=2.4.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
    "bandit>=1.7.0",
    "safety>=2.3.0"
]
tensorrt = [
    "tensorrt>=8.6.0",
    "pycuda>=2022.2"
]
openvino = [
    "openvino>=2023.0.0",
    "openvino-dev>=2023.0.0"
]
edge = [
    "tflite-runtime>=2.13.0",
    "onnxruntime-gpu>=1.15.0"
]
visualization = [
    "graphviz>=0.20.0",
    "netron>=6.9.0",
    "torchinfo>=1.8.0"
]
all = [
    "ml-model-compression[dev,tensorrt,openvino,edge,visualization]"
]

[project.urls]
Homepage = "https://github.com/KeepALifeUS"
Repository = "https://github.com/KeepALifeUS"
Documentation = "https://example.com"
"Bug Tracker" = "https://github.com/KeepALifeUS"
Changelog = "https://github.com/KeepALifeUS"

[project.scripts]
compress = "src.cli:main"
quantize = "src.quantization.quantizer:cli_main"
prune = "src.pruning.structured_pruning:cli_main"
distill = "src.distillation.knowledge_distiller:cli_main"
deploy-edge = "src.deployment.edge_deployer:cli_main"
analyze-model = "src.utils.model_analyzer:cli_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.txt", "*.md"]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests", 
    "e2e: marks tests as end-to-end tests",
    "performance: marks tests as performance benchmarks",
    "gpu: marks tests that require GPU",
    "edge: marks tests for edge devices",
    "crypto: marks tests specific to crypto trading"
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

# Coverage configuration  
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

# Black formatter configuration
[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
known_first_party = ["src"]
known_third_party = [
    "torch", 
    "torchvision", 
    "tensorflow", 
    "numpy", 
    "pandas", 
    "sklearn", 
    "onnx",
    "onnxruntime"
]

# MyPy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "tensorflow.*",
    "torch.*", 
    "torchvision.*",
    "onnx.*",
    "onnxruntime.*",
    "sklearn.*",
    "scipy.*",
    "matplotlib.*",
    "seaborn.*",
    "plotly.*",
    "wandb.*",
    "mlflow.*"
]
ignore_missing_imports = true

# Flake8 configuration (in setup.cfg format for compatibility)
[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503", "E501"]
max-complexity = 12
docstring-convention = "google"
per-file-ignores = [
    "__init__.py:F401",
    "tests/*:D100,D101,D102,D103,D104"
]

# Bandit security linter configuration
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B601"]

# Project specific configuration
[tool.ml]
domain = "ml-model-compression"
category = "ai-ml"
version = "5.0"

production_ready = true
edge_deployment = true
hft_optimized = true

[tool.ml.compression]
default_quantization = "int8"
default_pruning = "structured"
default_distillation = "response_based"
target_compression_ratio = 0.7
accuracy_threshold = 0.95

[tool.ml.deployment]
target_devices = ["cpu", "cuda", "raspberry_pi", "jetson_nano", "intel_nuc"]
export_formats = ["onnx", "torchscript", "tensorrt", "tflite"]
optimization_level = "O2"

[tool.ml.crypto_trading]
hft_latency_target_ms = 0.1
inference_batch_size = 1
model_warmup_iterations = 100
cache_predictions = true
parallel_processing = true